# raintities

./: .gitignore  Cargo.toml
assets/shaders/: background_material.wgsl
src/: background.rs  background_material.wgsl  boss.rs  damage.rs  enemy.rs  health.rs  item.rs  level.rs  main.rs  player.rs  title.rs
src/player/: damage_effect.rs  mod.rs
