[package]
name = "raintities"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = [
#   "animation",
  "bevy_asset",
  "bevy_audio",
#   "bevy_gilrs",
#   "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
#   "bevy_pbr",
#   "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
#   "hdr",
  "vorbis",
  "x11",
  "bevy_gizmos",
#   "android_shared_stdcxx",
  "tonemapping_luts",
#   "default_font",
  "webgl2",
] }
bevy-debug-text-overlay = "7.0.0"
bevy-inspector-egui = "0.21.0"
bevy_framepace = "0.14.1"
bevy_xpbd_2d = "0.3.2"
leafwing-input-manager = "0.11.2"
rand = "0.8.5"

# https://github.com/bevyengine/bevy/issues/10425
blake3 = { version = "1.5", features = ["pure"] }
seldom_state = "0.8.0"
bevy_tweening = "0.9.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
debug = 1
opt-level = 3
